--- a/app/src/main/res/layout/review_in_app_fragment.xml
+++ b/app/src/main/res/layout/review_in_app_fragment.xml
@@ -19,7 +19,7 @@
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_marginTop="16dp"
-            android:src="@drawable/ic_launcher_foreground"
+            android:src="@drawable/ic_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -56,6 +56,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
 
         <RatingBar
+            android:theme="@style/RatingBar"
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
