--- a/app/src/main/res/layout/review_in_app_fragment.xml
+++ b/app/src/main/res/layout/review_in_app_fragment.xml
@@ -56,7 +56,8 @@
             app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
 
         <RatingBar
-            android:theme="@style/RatingBar"
+            android:stepSize="1"
+            style="@style/CustomRatingBarStyle"
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -70,6 +71,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSend"
             android:layout_width="0dp"
+            app:cornerRadius="8dp"
             android:layout_height="56dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
