--- a/app/src/main/res/layout/review_in_app_fragment.xml
+++ b/app/src/main/res/layout/review_in_app_fragment.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="ru.banki.ui.reviewInApp.ReviewInAppViewModel" />
+            type="ru.banki.ui.reviewinapp.ReviewInAppViewModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
