--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -38,20 +38,20 @@
 
     <fragment
         android:id="@+id/myApplications"
-        android:name="ru.banki.ui.myApplications.MyApplications"
+        android:name="ru.banki.ui.myapplications.MyApplications"
         android:label="MyApplications"
         tools:layout="@layout/my_applications_fragment" />
 
     <dialog
         android:id="@+id/reviewInApp"
-        android:name="ru.banki.ui.reviewInApp.ReviewInApp"
+        android:name="ru.banki.ui.reviewinapp.ReviewInApp"
         android:label="ReviewInApp"
         tools:layout="@layout/review_in_app_fragment">
 
     </dialog>
     <dialog
         android:id="@+id/reviewInAppFinish"
-        android:name="ru.banki.ui.reviewInApp.ReviewInAppFinish"
+        android:name="ru.banki.ui.reviewinapp.ReviewInAppFinish"
         android:label="ReviewInAppFinish"
         tools:layout="@layout/review_in_app_finish_fragment"/>
 
